# Bebop-Data-Logger

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
config/: bdl_service.sh  bebop-data-logger.service
src/: App.cpp  App.h  AppStates.h  DataFrame.h  DataLogger.cpp  DataLogger.h  Logger.cpp  Logger.h  Server.cpp  Server.h  main.cpp
utils/: CMakeLists.txt
utils/image_extractor/: CMakeLists.txt  main.cpp
utils/txt_generator/: CMakeLists.txt  main.cpp
